# SolarSystem

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: AstronomicalObject.cpp  AstronomicalObject.h  CMakeLists.txt  Camera.cpp  Camera.h  FramgentShader.fs  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  Sphere.cpp  Sphere.h  Time.cpp  Time.h  VertexShader.vs  main.cpp
src/cbs/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Transform.cpp  Transform.h
src/cbs/components/: AstronomicalObject.cpp  AstronomicalObject.h  Camera.cpp  Camera.h  FirstPersonController.cpp  FirstPersonController.h  IComponent.h  Manager.cpp  Manager.h  PointLight.cpp  PointLight.h  Tail.cpp  Tail.h  ThirdPersonController.cpp  ThirdPersonController.h
src/components/: AstronomicalObject.cpp  AstronomicalObject.h  Camera.cpp  Camera.h  FirstPersonController.cpp  FirstPersonController.h  IComponent.cpp  IComponent.h  Manager.cpp  Manager.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  test.h
src/rendering/: Cubemap.h  DrawManager.cpp  DrawManager.h  IDrawable.cpp  IDrawable.h  ILighSource.h  ShaderProgram.cpp  ShaderProgram.h
src/scenes/: IScene.cpp  IScene.h  MainScene.cpp  MainScene.h  Scene.cpp  Scene.h
src/shaders/: COLOR_PURE.vs  LightReceiver.fs  LightReceiver.vs  PHONG.frag  PHONG_TEXTURE.fs  PURE_TEXTURE.frag  SKYBOX.vs  TEXTURE_PURE.vs
src/utilities/: Cubemap.cpp  Cubemap.h  DrawManager.cpp  DrawManager.h  Input.cpp  Input.h  Line.cpp  Line.h  ObjectManager.cpp  ObjectManager.h  Time.cpp  Time.h  Window.cpp  Window.h
(+10 files in other folders)
